# agentic_coding_test

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  VALIDATION.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  script.js  setup.py  styles.css  test_ecommerce.py  test_timers.py  tsconfig.json
app/: main.py
app/api/v1/routes/: dashboard.py  (+1 more)
app/core/: config.py  exceptions.py
app/schemas/: dashboard.py  memo.py
app/services/: dashboard_service.py  memo_service.py
backend/: requirements.txt
backend/app/: main.py
backend/tests/: test_main.py
docs/: API_TEST_GUIDE.md  CLAUDE.md  SETUP_GUIDE.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Counter.test.tsx  Counter.tsx  ProductDetailPage.tsx  ProductListPage.tsx
frontend/src/services/: api.ts  productApi.ts  storage.ts
frontend/src/types/: product.ts
frontend/src/utils/: debounce.ts
public/: index.html
scripts/: run-tests.sh
src/: App.css  App.js  App.tsx
src/auth/: jwt_handler.py
src/components/: Counter.css  Counter.js  Counter.test.js
src/components/common/: Header.tsx
src/components/timer/: TimeDisplay.tsx  TimerControls.tsx
src/components/ui/: FilterSidebar.tsx  ProductCard.tsx
src/hooks/: useAudio.ts  useCounter.js  useCounter.test.js  useSession.js  useSession.test.js  useTimer.ts
src/models/: user.py
src/styles/: global.css
src/types/: index.js
src/utils/: sessionUtils.js  sessionUtils.test.js  timeFormat.ts
tests/: test_auth.py
(+1 files in other folders)
